--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,3 +79,81 @@ h4 {
 .et_pb_widget ul li, .et_pb_widget.woocommerce .product_list_widget li {
     margin-bottom: 0 !important;
 }
+
+
+img    {
+    border-radius: 50%;
+}
+
+element.style {
+    height: 104px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+user agent stylesheet
+div {
+    display: block;
+}
+
+body {
+    background: #ecf0f5;
+    padding: 0;
+    margin: 0;
+    color: rgba(0, 0, 0, 0.68);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px !important;
+    font-weight: 400;
+    line-height: 1.7em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    background: #ecf0f5;
+    padding: 0;
+    margin: 0;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    line-height: 1.7em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+/* 
+.IalUJ .be6sR {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.IalUJ {
+    border: 0;
+    cursor: pointer;
+    height: 100%;
+    padding: 0;
+    width: 100%;
+} */
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline
+}
+
+
+
+@media only screen and (min-width: 1024px){
+#main-header-wrapper{
+    transition: height 0.5s;
+}
+}
+
+
